<resources>
    <string name="app_name">CAA</string>
    <string name="CAATitle">Welcome</string>
    <string name="ReportButton">Report</string>
    <string name="Accident">Accident</string>
    <string name="type">Crime</string>
    <string name="subTitle">Crime/Accident Type</string>
    <string name="fullName">Name of person reporting</string>
    <string name="description">Description of Crime/Accident</string>
    <string name="button_location">Location of Crime/Accident</string>
    <string name="add_button">Add Crime/Accident</string>
    <string name="menu_action_report_C_A">Add</string>
    <string name="list">list</string>
    <string name="action_crime">Add Crime</string>
    <string name="action_list">List Crime</string>
    <string name="action_maps">Map</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="nav_header_title">Tony</string>
    <string name="nav_header_subtitle">20090185@mail.wit.ie</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="no_crimes">No Crimes/Accidents, all safe!</string>
    <string name="cant_upload_crime">Error : cant upload crime please try again</string>
    <string name="select_image">Select Image</string>

    <string name="report_details">Report Details</string>
    <string name="crime_name">Crime/Accident:</string>
    <string name="date_time">Date and Time :</string>
    <string name="Description">Description:</string>
    <string name="Danger_lvl">Danger Level :</string>
    <!-- Strings related to login -->
    <!-- Date and Time -->
    <string name="date">"Date of Report"</string>
    <string name="time">"Time of Report"</string>
    <string name="search">"Filter"</string>
    <string name="login">Login</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome!"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>

    <string name="messageLoading">Please Wait a moment ...</string>
    <string name="label_emailpassword">Email/Password Authentication</string>
    <string name="desc_emailpassword">Use an email and password to authenticate with Firebase.</string>
    <string name="sign_in">Sign In</string>
    <string name="create_account">Create Account</string>
    <string name="send_link">Send Link</string>
    <string name="sign_out">Sign Out</string>
    <string name="verify_email">Verify Email</string>
    <string name="disconnect">Disconnect</string>
    <string name="loading">Loading…</string>
    <string name="signed_in">Signed In</string>
    <string name="signed_out">Signed Out</string>
    <string name="token_null">Token: null</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="desc_firebase_lockup">Firebase logo and name</string>
    <string name="auth_failed">Authentication failed</string>
    <string name="firebase_status_fmt">Firebase User: %s</string>
    <string name="firebase_user_management">Firebase User Management</string>
    <string name="emailpassword_status_fmt">Email User: %1$s (verified: %2$b)</string>
    <string name="emailpassword_title_text">Please Login Below</string>

    <string name="sign_in_google">Sign In with Google</string>
    <string name="sign_in_email">Sign In with Email</string>
    <string name="sign_in_phone">Sign In with Phone</string>
    <string name="theme_switch_label">Dark/Light Mode</string>
</resources>