<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/reportCrimeActivityFragment"
            android:icon="@drawable/ic_baseline_report_24"
            android:title="@string/action_crime" />
        <item
            android:id="@+id/listFragment"
            android:icon="@drawable/ic_baseline_list_24"
            android:title="@string/action_list" />
        <item
            android:id="@+id/viewMapsFragment"
            android:icon="@drawable/ic_baseline_add_location_24"
            android:title="@string/action_maps" />
    </group>
    <item android:title="Access Control">
        <menu>
            <item
                android:id="@+id/signOut"
                android:icon="@android:drawable/ic_menu_revert"
                android:onClick="signOut"
                android:title="@string/sign_out" />
        </menu>
    </item>
</menu>


