<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/grey_100"
    android:orientation="vertical"
    android:weightSum="4">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="3"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/icon"
            style="@style/ThemeOverlay.FirebaseIcon"
            android:layout_width="286dp"
            android:layout_height="325dp"
            android:contentDescription="@string/desc_firebase_lockup"
            android:src="@drawable/logo" />

        <TextView
            android:id="@+id/titleText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/title_bottom_margin"
            android:paddingTop="30dp"
            android:text="@string/emailpassword_title_text"
            android:textColor="@color/colorWhite" />

    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:background="@color/colorWhite"
        android:gravity="center_vertical">

        <LinearLayout
            android:id="@+id/emailButton"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:orientation="horizontal"
            android:paddingLeft="16dp"
            android:paddingRight="16dp">

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/emailSignInButton"
                style="@style/Widget.AppCompat.Button.Colored"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_margin="2dp"
                android:layout_weight="1"
                android:backgroundTint="@color/fui_bgEmail"
                android:drawableStart="@drawable/fui_ic_mail_white_24dp"
                android:elevation="40dp"
                android:gravity="center"
                android:paddingStart="30dip"
                android:paddingEnd="37dip"
                android:singleLine="true"
                android:text="@string/sign_in_email"
                android:textAlignment="center"
                android:textAllCaps="false"
                android:textSize="18sp" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/phoneButton"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_below="@+id/emailButton"
            android:orientation="horizontal"
            android:paddingLeft="16dp"
            android:paddingRight="16dp">

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/phoneSignInButton"
                style="@style/Widget.AppCompat.Button.Colored"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_margin="2dp"
                android:layout_weight="1"
                android:backgroundTint="@color/fui_bgPhone"
                android:drawableStart="@drawable/fui_ic_phone_white_24dp"
                android:elevation="40dp"
                android:gravity="center"
                android:paddingStart="28dip"
                android:paddingEnd="26dip"
                android:singleLine="true"
                android:text="@string/sign_in_phone"
                android:textAlignment="center"
                android:textAllCaps="false"
                android:textColor="#424242"
                android:textSize="18sp" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/googleButton"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_below="@+id/phoneButton"
            android:orientation="horizontal"
            android:paddingLeft="16dp"
            android:paddingRight="16dp">

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/googleSignInButton"
                style="@style/Widget.AppCompat.Button.Colored"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_margin="2dp"
                android:layout_weight="1"
                android:backgroundTint="@color/colorAccent"
                android:drawableStart="@drawable/common_google_signin_btn_icon_dark"
                android:elevation="40dp"
                android:gravity="center"
                android:paddingStart="25dip"
                android:paddingEnd="26dip"
                android:singleLine="true"
                android:text="@string/sign_in_google"
                android:textAlignment="center"
                android:textAllCaps="false"
                android:textSize="18sp" />

        </LinearLayout>

    </RelativeLayout>

</LinearLayout>
